@@ -58,6 +58,32 @@
 #define FONT_MIN 20
 #define FONT_MAX 200
 
+#define MENU_STR_AUDIO   "Audio [%s]"
+#define MENU_STR_BACK    "Back ^b"
+#define MENU_STR_CONSOLE "Console"
+#define MENU_STR_CONTROL "Control Mode [%s]"
+#define MENU_STR_COPY    "Copy ^c"
+#define MENU_STR_CUT     "Cut ^x"
+#define MENU_STR_DEBUG   "Debug"
+#define MENU_STR_EDITOR  "Editor [%s]"
+#define MENU_STR_FONT    "Font Size %d%%"
+#define MENU_STR_HELP    "Help"
+#define MENU_STR_KEYPAD  "Show Keypad"
+#define MENU_STR_OFF     "OFF"
+#define MENU_STR_ON      "ON"
+#define MENU_STR_OUTPUT  "Show Output"
+#define MENU_STR_PASTE   "Paste ^v"
+#define MENU_STR_REDO    "Redo ^y"
+#define MENU_STR_RESTART "Restart"
+#define MENU_STR_RUN     "Run ^r"
+#define MENU_STR_SAVE    "Save ^s"
+#define MENU_STR_SCREEN  "Screenshot ^p"
+#define MENU_STR_SELECT  "Select All ^a"
+#define MENU_STR_SHARE   "Share"
+#define MENU_STR_SHORT   "Desktop Shortcut"
+#define MENU_STR_SOURCE  "View Source"
+#define MENU_STR_UNDO    "Undo ^z"
+
 System *g_system;
 
 void Cache::add(const char *key, const char *value) {
@@ -139,6 +165,38 @@ bool System::execute(const char *bas) {
   _output->flush(true);
   _userScreenId = -1;
   return result != 0;
+}
+
+void System::formatOptions(StringList *items) {
+  int maxLength = 0;
+  bool hasControl = false;
+  List_each(String *, it, *items) {
+    String *str = * it;
+    if (str->indexOf('^', 0) != -1) {
+      hasControl = true;
+    }
+    int len = str->length();
+    if (len > maxLength) {
+      maxLength = len;
+    }
+  }
+  if (hasControl) {
+    List_each(String *, it, *items) {
+      String *str = * it;
+      if (str->indexOf('^', 0) != -1) {
+        String command = str->leftOf('^');
+        String control = str->rightOf('^');
+        int len = maxLength - str->length();
+        for (int i = 0; i < len; i++) {
+          command.append(' ');
+        }
+        command.append("C-");
+        command.append(control);
+        str->clear();
+        str->append(command);
+      }
+    }
+  }
 }
 
 bool System::fileExists(strlib::String &path) {
@@ -866,19 +924,19 @@ void System::showMenu() {
     int index = 0;
     if (get_focus_edit() != nullptr) {
       if (isEditing()) {
-        items->add(new String("Undo"));
-        items->add(new String("Redo"));
-        items->add(new String("Cut"));
-        items->add(new String("Copy"));
-        items->add(new String("Paste"));
-        items->add(new String("Select All"));
-        items->add(new String("Save"));
-        items->add(new String("Run"));
+        items->add(new String(MENU_STR_UNDO));
+        items->add(new String(MENU_STR_REDO));
+        items->add(new String(MENU_STR_CUT));
+        items->add(new String(MENU_STR_COPY));
+        items->add(new String(MENU_STR_PASTE));
+        items->add(new String(MENU_STR_SELECT));
+        items->add(new String(MENU_STR_SAVE));
+        items->add(new String(MENU_STR_RUN));
 #if defined(_SDL)
-        items->add(new String("Debug"));
-        items->add(new String("Show Output"));
+        items->add(new String(MENU_STR_DEBUG));
+        items->add(new String(MENU_STR_OUTPUT));
 #endif
-        items->add(new String("Help"));
+        items->add(new String(MENU_STR_HELP));
         for (int i = 0; i < completions; i++) {
           _systemMenu[index++] = MENU_COMPLETION_0 + i;
         }
@@ -896,70 +954,72 @@ void System::showMenu() {
 #endif
         _systemMenu[index++] = MENU_HELP;
       } else if (isRunning()) {
-        items->add(new String("Cut"));
-        items->add(new String("Copy"));
-        items->add(new String("Paste"));
-        items->add(new String("Select All"));
+        items->add(new String(MENU_STR_CUT));
+        items->add(new String(MENU_STR_COPY));
+        items->add(new String(MENU_STR_PASTE));
+        items->add(new String(MENU_STR_SELECT));
         _systemMenu[index++] = MENU_CUT;
         _systemMenu[index++] = MENU_COPY;
         _systemMenu[index++] = MENU_PASTE;
         _systemMenu[index++] = MENU_SELECT_ALL;
       }
 #if defined(_SDL) || defined(_FLTK)
-      items->add(new String("Back"));
+      items->add(new String(MENU_STR_BACK));
       _systemMenu[index++] = MENU_BACK;
 #else
-      items->add(new String("Show keypad"));
+      items->add(new String(MENU_STR_KEYPAD));
       _systemMenu[index++] = MENU_KEYPAD;
       if (!isEditing()) {
         bool controlMode = get_focus_edit()->getControlMode();
-        sprintf(buffer, "Control Mode [%s]", (controlMode ? "ON" : "OFF"));
+        sprintf(buffer, MENU_STR_CONTROL, (controlMode ? MENU_STR_ON : MENU_STR_OFF));
         items->add(new String(buffer));
         _systemMenu[index++] = MENU_CTRL_MODE;
       }
 #endif
     } else {
-      items->add(new String("Console"));
-      items->add(new String("View source"));
+      items->add(new String(MENU_STR_CONSOLE));
+      items->add(new String(MENU_STR_SOURCE));
       _systemMenu[index++] = MENU_CONSOLE;
       _systemMenu[index++] = MENU_SOURCE;
       if (!isEditing()) {
-        items->add(new String("Restart"));
+        items->add(new String(MENU_STR_RESTART));
         _systemMenu[index++] = MENU_RESTART;
       }
 #if !defined(_SDL) && !defined(_FLTK)
-      items->add(new String("Show keypad"));
+      items->add(new String(MENU_STR_KEYPAD));
       _systemMenu[index++] = MENU_KEYPAD;
 #endif
-      items->add(new String("Screenshot"));
+      items->add(new String(MENU_STR_SCREEN));
       _systemMenu[index++] = MENU_SCREENSHOT;
       if (_mainBas) {
-        sprintf(buffer, "Font Size %d%%", _fontScale - FONT_SCALE_INTERVAL);
+        sprintf(buffer, MENU_STR_FONT, _fontScale - FONT_SCALE_INTERVAL);
         items->add(new String(buffer));
-        sprintf(buffer, "Font Size %d%%", _fontScale + FONT_SCALE_INTERVAL);
+        sprintf(buffer, MENU_STR_FONT, _fontScale + FONT_SCALE_INTERVAL);
         items->add(new String(buffer));
         _systemMenu[index++] = MENU_ZOOM_UP;
         _systemMenu[index++] = MENU_ZOOM_DN;
-        sprintf(buffer, "Editor [%s]", opt_ide == IDE_NONE ? "OFF" : "ON");
+        sprintf(buffer, MENU_STR_EDITOR, opt_ide == IDE_NONE ? MENU_STR_OFF : MENU_STR_ON);
         items->add(new String(buffer));
         _systemMenu[index++] = MENU_EDITMODE;
       }
 #if !defined(_SDL) && !defined(_FLTK)
       if (!_mainBas && !_activeFile.empty()) {
-        items->add(new String("Desktop Shortcut"));
-        items->add(new String("Share"));
+        items->add(new String(MENU_STR_SHORT));
+        items->add(new String(MENU_STR_SHARE));
         _systemMenu[index++] = MENU_SHORTCUT;
         _systemMenu[index++] = MENU_SHARE;
       }
 #endif
-      sprintf(buffer, "Audio [%s]", (opt_mute_audio ? "OFF" : "ON"));
+      sprintf(buffer, MENU_STR_AUDIO, (opt_mute_audio ? MENU_STR_OFF : MENU_STR_ON));
       items->add(new String(buffer));
       _systemMenu[index++] = MENU_AUDIO;
 #if defined(_SDL) || defined(_FLTK)
-      items->add(new String("Back"));
+      items->add(new String(MENU_STR_BACK));
       _systemMenu[index++] = MENU_BACK;
 #endif
     }
+
+    formatOptions(items);
     optionsBox(items);
     delete items;
     _menuActive = false;
