@@ -1,6 +1,7 @@
-2019-11-30 (0.12.17)
+2019-12-07 (0.12.17)
 	FLTK: fix memory leaks
 	FLTK: implement audio
+	UI: add menu control key indicators
 
 2019-11-30 (0.12.17)
 	ANDROID: fix module access in newer android versions.
